tests/baselines/reference/checkJsFiles_noErrorLocation.errors.txt
tests/cases/compiler/a.js(14,10): error TS2424: Class 'A' defines instance member function 'foo', but extended class 'B' defines it as instance member property.


==== tests/cases/compiler/a.js (1 errors) ====
    // @ts-check
    class A {
      constructor() {
    
      }
      foo() {
        return 4;
      }
    }
    
    class B extends A {
      constructor() {
        super();
        this.foo = () => 3;
             ~~~
!!! error TS2424: Class 'A' defines instance member function 'foo', but extended class 'B' defines it as instance member property.
      }
    }
    
    const i = new B();
    i.foo();